# mini-games

./: Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: github_actions.yml
mini_games/: cli.py  game_engine.py
mini_games/games/: calculator.py  even_num.py  greatest_common_divisor.py  list_games.py  prime_num.py  progression.py
mini_games/scripts/: start_game.py
tests/: test_mini_games.py
tests/test_games/: test_calculator.py  test_even_num.py  test_greatest_common_divisor.py  test_prime_num.py  test_progression.py
