[tool.poetry]
name = "mini-games"
version = "0.1.0"
description = "Набор из пяти математических мини-игр"
authors = ["Michael Fedorov <mikhailfedorov1939@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
pytest = "^7.1"
flake8 = "^5.0.4"
pytest-cov = "^3.0.0"

[tool.poetry.scripts]
start-game = "mini_games.scripts.start_game:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
