[tool.poetry]
name = "mini-games"
version = "1.0.0"
description = "Набор из пяти математических мини-игр"
license = "MIT"
authors = ["Michael Fedorov <mikhailfedorov1939@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/MichaelFed68/mini-games"
repository = "https://github.com/MichaelFed68/mini-games"
packages = [
    { include = "mini_games" },
]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
pytest = "^7.1"
flake8 = "^5.0.4"
pytest-cov = "^3.0.0"

[tool.poetry.scripts]
mini-games = "mini_games.scripts.start_game:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
